--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "devDependencies": {
     "@aws-cdk/assert": "1.124.0",
     "@aws-cdk/aws-budgets": "1.124.0",
+    "@aws-cdk/aws-codepipeline": "1.124.0",
+    "@aws-cdk/aws-codepipeline-actions": "1.124.0",
+    "@aws-cdk/aws-codebuild": "1.124.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
     "aws-cdk": "1.124.0",
+    "jest": "^27.2.4",
+    "ts-jest": "^27.0.5",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
