--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "jest": "^27.2.4",
     "ts-jest": "^27.0.5",
     "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "typescript": "~3.9.7",
+    "jest-junit": "13.0.0"
   },
   "dependencies": {
     "@aws-cdk/core": "1.124.0",
