--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@aws-cdk/aws-codepipeline": "1.124.0",
     "@aws-cdk/aws-codepipeline-actions": "1.124.0",
     "@aws-cdk/aws-codebuild": "1.124.0",
+    "@aws-cdk/aws-lambda": "1.124.0",
+    "@aws-cdk/aws-apigatewayv2": "1.124.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "1.124.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "aws-cdk": "1.124.0",
